[package]
name = "advent-of-code-2018"
version = "0.1.0"
authors = ["haraldmaida"]
license = "MIT"

description = """Solving Advent of Code Puzzles for 2018"""

readme = "README.md"
repository = "https://github.com/haraldmaida/advent-of-code-2018"
keywords = ["advent", "puzzle"]

edition = "2018"

[lib]
bench = false

[dependencies]
aoc-runner = "0.2"
aoc-runner-derive = "0.2"
failure = "0.1"
log = { version = "0.4", features = ["release_max_level_info"] }

[dev-dependencies]
proptest = "0.8"
